--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,10 +22,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-dev:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -48,6 +45,15 @@ jobs:
           outputStyle: compressed
           sourceComments: false
           sourceMap: false
+          
+  build-scra:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+  
+    steps:
+      - run: ls
       - name: Checkout SCRA
         uses: actions/checkout@v3
         with:
@@ -56,17 +62,17 @@ jobs:
           path: scra/temp
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - run: cd scra/temp
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
           cache: npm
+          cache-dependency-path: ./scra/temp/package-lock.json
       - name: Restore cache
         uses: actions/cache@v3
         with:
           path: |
-            .next/cache
+            ./scra/temp/.next/cache
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.tsx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
@@ -74,17 +80,29 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Install dependencies
         run: npm install
+        working-directory: ./srca/temp/
       - name: Build with Next.js
         run: npx --no-install next build
-      - run: cd ..
+        working-directory: ./srca/temp/
       - name: Copy next build
-        run: cp ./temp/out/* .
-      - run: cd ..
+        run: |
+          cp ./srca/temp/out/* ./srca
+          ls
+          rm -rf ./temp
+          ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: '.'
+          
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: [build-dev, build-scra]
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
