--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,6 +47,7 @@ jobs:
           sourceMap: false
           
   build-scra:
+    needs: build-dev
     runs-on: ubuntu-latest
     environment:
       name: github-pages
