--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,6 +46,11 @@ jobs:
           sourceComments: false
           sourceMap: false
       - run: ls
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
           
   build-scra:
     needs: build-dev
@@ -62,8 +67,6 @@ jobs:
           repository: ASoftGlow/scra
           token: ${{ secrets.GH_SCRA_PAT }}
           path: scra/temp
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -82,13 +85,13 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Install dependencies
         run: npm install
-        working-directory: srca/temp/
+        working-directory: scra/temp/
       - name: Build with Next.js
         run: npx --no-install next build
-        working-directory: srca/temp/
+        working-directory: scra/temp/
       - name: Copy next build
         run: |
-          cp ./srca/temp/out/* ./srca
+          cp ./scra/temp/out/* ./scra
           ls
           rm -rf ./temp
           ls
@@ -105,6 +108,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-dev, build-scra]
     steps:
+      - run: ls
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
