--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,10 +47,11 @@ jobs:
           sourceMap: false
       - run: ls
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: '.'
+          name: dev
           
   build-scra:
     needs: build-dev
@@ -60,24 +61,21 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
   
     steps:
-      - run: ls
       - name: Checkout SCRA
         uses: actions/checkout@v3
         with:
           repository: ASoftGlow/scra
           token: ${{ secrets.GH_SCRA_PAT }}
-          path: scra/temp
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
           cache: npm
-          cache-dependency-path: ./scra/temp/package-lock.json
       - name: Restore cache
         uses: actions/cache@v3
         with:
           path: |
-            ./scra/temp/.next/cache
+            .next/cache
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.tsx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
@@ -85,21 +83,14 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Install dependencies
         run: npm install
-        working-directory: scra/temp/
       - name: Build with Next.js
         run: npx --no-install next build
-        working-directory: scra/temp/
-      - name: Copy next build
-        run: |
-          cp ./scra/temp/out/* ./scra
-          ls
-          rm -rf ./temp
-          ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: 'out'
+          name: scra
           
   deploy:
     environment:
@@ -108,6 +99,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-dev, build-scra]
     steps:
+      - name: Download dev artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dev
+      - name: Download dev artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: scra
+          path: scra
       - run: ls
       - name: Setup Pages
         uses: actions/configure-pages@v3
