--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,21 +28,21 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Persist npm cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
 
       - name: Persist Eleventy .cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ./.cache
           key: ${{ runner.os }}-eleventy-fetch-cache
@@ -51,7 +51,7 @@ jobs:
       - run: npm run build
       
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           # Upload entire repository
           path: '_site'
@@ -103,7 +103,7 @@ jobs:
     needs: [build-dev]
     steps:
       - name: Download dev artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dev
       # - name: Download scra artifact
@@ -113,7 +113,9 @@ jobs:
       #     path: scra
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: '.'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
