--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "ASoftGlow",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "sass": "^1.72.0"
+    "@11ty/eleventy": "^2.0.1"
   }
 }
